# fix-codec-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: fix_bench.rs
src/: body_length.rs  checksum.rs  decoder.rs  encoder.rs  error.rs  field.rs  group.rs  lib.rs  message.rs  tag.rs
